# tnfsh-timetable-api

./: main.py  pyproject.toml
origin/scheduling/: basic_rotation.py  basic_swap.py
origin/timetable/: get_course_info.py
tests/api/index/: test_category.py  test_class.py  test_grade.py  test_teacher.py
tests/api/other/: __init__.py  test_last_update.py  test_periods.py
tests/api/scheduling/: test_rotation.py  test_streak.py  test_swap.py
tests/api/timetable/: test_all_timetable.py  test_courese_info.py  test_query.py  test_target_url.py  test_timetable.py
tnfsh_timetable_api/: __init__.py  main.py
tnfsh_timetable_api/api/index/: __init__.py  category.py  class_.py  grade.py  teacher.py
tnfsh_timetable_api/api/other/: last_update.py  periods.py
tnfsh_timetable_api/api/scheduling/: rotation.py  streak.py  swap.py
tnfsh_timetable_api/api/timetable/: __init__.py  get_all_class_timetable.py  get_all_combined_timetable.py  get_all_teacher_timetable.py  get_all_timetable.py  get_course_info.py  get_target_url.py  get_timetable.py  query.py
